--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mongodb": "^3.1.10",
+    "monk": "^6.0.6",
     "swagger-express-middleware": "^1.1.1"
   }
 }
