--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "example app creating mock out of swagger spec using swagger-express-middleware",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node --presets env src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +14,12 @@
     "mongodb": "^3.1.10",
     "monk": "^6.0.6",
     "swagger-express-middleware": "^1.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "dotenv": "^6.2.0",
+    "nodemon": "^1.18.7",
+    "rimraf": "^2.6.2"
   }
 }
